--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,92 +9,78 @@
 
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <h1>AnimeRadar</h1>
-        <p class="slogan">Seu radar definitivo para descobrir e analisar animes</p>
-      </header>
-    
-      <section class="filtros" aria-label="Filtros de animes">
-        <fieldset>
-          <legend>Buscar por nome</legend>
-          <input type="search" id="searchInput" placeholder="Digite o nome do anime" aria-label="Busca por nome de anime" />
-        </fieldset>    
+    <header class="cabecalho">
+        <h1 class="titulo-cabecalho">Anime Radar</h1>
+        <p class="subtitulo-cabecalho">Tudo sobre animes, em um só lugar.</p>
+    </header>
 
-    <fieldset>
-        <legend>Gênero</legend>
-        <select id="genreSelect" aria-label="Filtrar por gênero">
-            <option value="">Todos os gêneros</option>
-            <option value="Action">Ação</option>
-            <option value="Adventure">Aventura</option>
-            <option value="Comedy">Comédia</option>
-            <option value="Drama">Drama</option>
-            <option value="Fantasy">Fantasia</option>
-            <option value="Magic">Magia</option>
-            <option value="Mystery">Mistério</option>
-            <option value="Romance">Romance</option>
-            <option value="Sci-fi">Ficção Científica</option>
-            <option value="Slice of Life">Slice of Life</option>
-            <option value="Sports">Esportes</option>
-            <option value="Supernatural">Sobrenatual</option>
-            <option value="Thriller">Suspense</option>
-            <option value="Horror">Terror</option>
-            <option value="Mecha">Mecha</option>
-            <option value="Psychological">Psicológico</option>
-            <option value="Historical">Histórico</option>
-            <option value="Seinen">Seinen</option>
-            <option value="Shoujo">Shoujo</option>
-            <option value="Shounen">Shounen</option>
-            <option value="Military">Militar</option>
-            <option value="Music">Música</option>
-            <option value="Ecchi">Ecchi</option>
-            <option value="Harem">Harém</option>
-        </select>
-    </fieldset>
+    <main class="conteudo-principal">
+        <section class="filtros" aria-label="Filtros de busca e navegação">
+            <form class="form-filtros" id="form-filtros" aria-describedby="desc-filtros">
+                <p id="desc-filtros" class="descricao-filtros">Filtre os animes por ano, tempoarada, gênero e nome</p>
 
-    <fieldset>
-        <legend>Temporada</legend>
-        <select id="seansonSelect" aria-label="Filtrar por temporada">
-            <option value="">Todas as temporadas</option>
-            <option value="WINTER">Inverno</option>
-            <option value="SPRING">Primavera</option>
-            <option value="SUMMER">Verão</option>
-            <option value="FALL"> Outuno</option>
-        </select>
-    </fieldset>
+                <div class="grupo-filtros">
+                    <label for="temporada-filtro" class="rotulo-filtros">
+                        Temporada:</label>
+                    <select id="temporada-filtro" name="temporada" class="seletor-filtros">
 
-    <fieldset>
-        <legend>Ano</legend>
-        <select id="yearSelect" aria-label="Filtrar por ano">
-            <option value="">Todos os anos</option>
-        </select>
-    </fieldset>
+                        <option value="">Todas</option>
+                        <option value="Primavera">Primavera</option>
+                        <option value="Verão">Verão</option>
+                        <option value="Outono">Outono</option>
+                        <option value="Inverno">Inverno</option>
+                    </select>
+                </div>
 
-    <fieldset>
-        <legend>Animes por página</legend>
-        <select id="perPageSelecy" aria-label="Quantidade de animes por página">
-          <option value="5">5</option>
-          <option value="10" selected>10</option>
-          <option value="15">15</option>
-          <option value="20">20</option>
-        </select>
-    </fieldset>
-</section>
+                <div class="grupo-filtros">
+                    <label for="genero-filtro" class="rotulo-filtros">Gênero</label>
+                    <select id="genero-filtro" name="genero" class="seletor-filtros">
+                        <option value="">Todos</option>
+                    </select>
+                </div>
 
-<main>
-    <section id="animeCards" class="anime-card" aria-live="polite" aria-label="Lista de animes"></section>
-    <nav class="paginacao" aria-label="Navegação da página de animes">
-    <button id="prevPageBtn" aria-label="Página anterior">Anterior</button>
-    <span id="pageInfo"></span>
-    <button id="nextPageBtn" aria-label="Próxima página">Próximo</button>
-    </nav>
-</main>
+                <div class="grupo-filtros">
+                    <label for="busca-nome" class="rotulos-filtros">Buscar por nome:</label>
+                    <input type="search" id="busca-nome" class="campo-busca" placeholder="Digite o nome do anime"
+                        aria-label="Buscar por nome do anime">
+                </div>
 
-<footer>
-    <p>© 2025 AnimeRadar — Seu radar definitivo para descobrir e analisar animes</p>
-</footer>
+                <div class="grupo-filtros">
+                    <label for="quantidade-pagina" class="rotulo-filtros">Animes por página:</label>
+                    <select id="quantidade-pagina" name="quantidadePagina" class="seletor-filtros">
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                    </select>
+                </div>
 
-<script src="src/js/index.js"></script>
+                <button type="submit" class="botao-filtros">Aplicar filtros</button>
+            </form>
+        </section>
+
+        <section class="secao-lista-animes" aria-label="Lista de animes" id="lista-animes">
+        </section>
+
+        <nav class="paginacao" aria-label="Paginação" id="paginacao">
+        </nav>
+    </main>
+
+    <footer class="rodape">
+        <p class="texto-rodape">Anime Radar © 2025 - Desenvolvido com amor</p>
+    </footer>
+
+    <script src="src/js/animes.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
+
 </html>
