Refatoração final do html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Radar - Painel de Animes</title>
 
+    <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsivo.css">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +21,11 @@
 </head>
 
 <body>
+    <label class="toggle-switch">
+        <input type="checkbox" id="toggleTheme" />
+        <span class="slider"></span>
+    </label>
+
     <header class="cabecalho">
         <h1 class="titulo-cabecalho">Anime Radar</h1>
         <p class="subtitulo-cabecalho">Tudo sobre animes, em um só lugar.</p>
