--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="checkbox" id="toggleTheme" />
         <span class="slider"></span>
     </label>
-
+    
     <header class="cabecalho">
         <h1 class="titulo-cabecalho">Anime Radar</h1>
         <p class="subtitulo-cabecalho">Tudo sobre animes, em um só lugar.</p>
@@ -34,7 +34,7 @@
     <main class="conteudo-principal">
         <section class="filtros" aria-label="Filtros de busca e navegação">
             <form class="form-filtros" id="form-filtros" aria-describedby="desc-filtros">
-                <p id="desc-filtros" class="descricao-filtros">Filtre os animes por ano, tempoarada, gênero e nome</p>
+                <p id="desc-filtros" class="descricao-filtros">Filtre os animes por ano, temporada, gênero e nome</p>
 
                 <div class="grupo-filtros">
                     <label for="temporada-filtro" class="rotulo-filtros">
