Alterações para refatoração

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <section class="secao-lista-animes" aria-label="Lista de animes" id="lista-animes">
         </section>
-
+        
         <nav class="paginacao" aria-label="Paginação" id="paginacao">
         </nav>
     </main>
@@ -85,8 +85,7 @@
         <p class="texto-rodape">Anime Radar © 2025 - Desenvolvido com amor</p>
     </footer>
 
-    <script src="src/js/animes.js"></script>
-    <script src="src/js/index.js"></script>
+    <script type="module" src="src/js/index.js"></script>
 </body>
 
 </html>
