Novo botão de curiosidade

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
         <section class="secao-lista-animes" aria-label="Lista de animes" id="lista-animes">
         </section>
         
+        <section class="secao-curiosidade" id="card-curiosidade">
+            <div class="card-curiosidade" id="card-curiosidade">
+            <img 
+            id="imagem-planta" 
+            src="" 
+            alt="Planta medicinal"
+            class="imagem-planta"
+            hidden
+            />
+            <p id="texto-curiosidade" class="texto-curiosidade"></p>
+            </div>
+        </section>
+        
         <nav class="paginacao" aria-label="Paginação" id="paginacao">
         </nav>
     </main>
