--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anime Radar - Onde a paixão por animes encontra curiosidades incríveis.</title>
 
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/responsivo.css">
+    <link rel="stylesheet" href="src/css/variables.css" />
+    <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/responsivo.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -29,7 +28,7 @@
         <p class="subtitulo-cabecalho slogan">Onde a paixão por animes encontra curiosidades incríveis.</p>
 
         <label class="toggle-switch" for="toggleTheme">
-            <input type="checkbox" id="toggleTheme" aria-label="Alternar tema claro e escuro">
+            <input type="checkbox" id="toggleTheme" aria-label="Alternar tema claro e escuro" />
             <span class="slider">
                 <i class="fa-solid fa-cat icone claro" aria-hidden="true"></i>
                 <i class="fa-solid fa-moon icone escuro" aria-hidden="true"></i>
@@ -63,7 +62,7 @@
                 <div class="grupo-filtros">
                     <label for="busca-nome" class="rotulo-filtros">Buscar por nome:</label>
                     <input type="search" id="busca-nome" class="campo-busca" placeholder="Digite o nome do anime"
-                        aria-label="Buscar por nome do anime">
+                        aria-label="Buscar por nome do anime" />
                 </div>
 
                 <div class="grupo-filtros">
@@ -80,16 +79,6 @@
         </section>
 
         <section class="secao-lista-animes" aria-label="Lista de animes" id="lista-animes">
-        </section>
-
-        <section class="secao-curisosidade" aria-label="Curiosidade sobre anime">
-            <button class="botao-curiosidade" id="btnCuriosidade" type="button" aria-expanded="false"
-                aria-controls="cardCuriosidade">
-                Mostrar Curiosidade
-            </button>
-            <article class="card-curiosidade" id="cardCuriosidade" aria-live="polite" hidden>
-                <img src="" alt="Imagem de planta medicinal" class="imagem-planta" id="imgPlanta">
-            </article>
         </section>
 
         <nav class="paginacao" aria-label="Paginação" id="paginacao">
