Atualização Anime JS

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <main class="conteudo-principal">
         <section class="filtros" aria-label="Filtros de busca e navegação">
             <form class="form-filtros" id="form-filtros" aria-describedby="desc-filtros">
-                <p id="desc-filtros" class="descricao-filtros">Filtre os animes por ano, temporada, gênero e nome</p>
+                <p id="desc-filtros" class="descricao-filtros">Filtre os animes por temporada, gênero e nome: </p>
 
                 <div class="grupo-filtros">
-                    <label for="temporada-filtro" class="rotulo-filtros">Temporada:</label>
+                    <label for="temporada-filtro" class="rotulo-filtros">Temporada</label>
                     <select id="temporada-filtro" name="temporada" class="seletor-filtros">
                         <option value="">Todas</option>
                         <option value="Primavera">Primavera</option>
@@ -60,13 +60,13 @@
                 </div>
 
                 <div class="grupo-filtros">
-                    <label for="busca-nome" class="rotulo-filtros">Buscar por nome:</label>
+                    <label for="busca-nome" class="rotulo-filtros">Buscar por nome</label>
                     <input type="search" id="busca-nome" class="campo-busca" placeholder="Digite o nome do anime"
                         aria-label="Buscar por nome do anime" />
                 </div>
 
                 <div class="grupo-filtros">
-                    <label for="quantidade-pagina" class="rotulo-filtros">Animes por página:</label>
+                    <label for="quantidade-pagina" class="rotulo-filtros">Animes por página</label>
                     <select id="quantidade-pagina" name="quantidadePagina" class="seletor-filtros">
                         <option value="5">5</option>
                         <option value="10" selected>10</option>
